# Builder

./: .gitignore  PRIVACY.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release-candidate.yml  verify-stable-updater.yml
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  ErrorBoundary.test.ts  ErrorBoundary.tsx  main.tsx  (+15 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
ontology/: builder-gear.json
release/: SBOM.cdx.json  THIRD_PARTY_NOTICES.md  distribution-policy.json  internal.env.example  license-policy.json  linux.internal.env.example  linux.stable.env.example  macos.internal.env.example  macos.stable.env.example  stable.env.example  tauri.stable.conf.json  windows.internal.env.example  windows.stable.env.example
scripts/: ci-policy.ts  cli-smoke.ts  desktop-bundle-smoke.ts  distribution-preflight.ts  generate-app-icons.ts  github-release-preflight.ts  github-release-setup.ts  license-data.ts  license-notices.ts  license-policy.ts  privacy-scan.ts  release-check.ts  release-script-args.ts  release-upload-plan.ts  sbom.ts  script-file-safety.ts  service-readiness.ts  stage-release-upload.ts  verify-release-manifest.ts  verify-stable-updater.ts
skills/build-plan/: instructions.md  skill.yaml
skills/research-brief/: instructions.md  skill.yaml
(+4 files in other folders)
